# dc-research-group-mercor-apex

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  results.md
data/: catalog.json
data/APEX-v1-extended/: .gitattributes  README.md  eval.yaml
data/APEX-v1-extended/data/: train.csv
data/APEX-v1-extended/documents/1080/: physicianFin.csv
data/APEX-v1-extended/documents/1091/: Targets.csv
data/APEX-v1-extended/documents/1122/: Survey.csv
data/APEX-v1-extended/documents/1149/: One View Bank September 2025 Sample Set - Fee Chart.csv
data/APEX-v1-extended/documents/1150/: General_sales_data.csv
data/APEX-v1-extended/documents/1166/: Emissions data.csv
data/APEX-v1-extended/documents/1169/: big mac.csv  country region mapping.csv  passenger data.csv
data/APEX-v1-extended/documents/1170/: orders.csv
data/APEX-v1-extended/documents/1171/: Task Data.csv
data/APEX-v1-extended/documents/1172/: US Population Census by State.csv
data/APEX-v1-extended/documents/1188/: Automated_Letter_Generation_Pilot.csv
data/APEX-v1-extended/documents/1191/: Data_Africa.csv  cultural (1).csv
data/APEX-v1-extended/documents/1192/: Restaurant SOW Estimates.csv
data/APEX-v1-extended/documents/1242/: Data.csv
data/APEX-v1-extended/documents/1265/: Unicorns.csv
data/APEX-v1-extended/documents/1269/: CA Population 2020 to 2024.csv
data/APEX-v1-extended/documents/1288/: CDI_Automation_Pilot.csv
data/APEX-v1-extended/documents/1384/: Employee_data.csv
data/APEX-v1-extended/documents/1407/: Attachment1407 .docx
data/APEX-v1-extended/documents/145/: Campaign_Portfolio.csv
data/APEX-v1-extended/documents/1588/: ConSup Inc Financial Model_PROMPT.xlsx
data/APEX-v1-extended/documents/2107/: Orion_Target.csv
data/APEX-v1-extended/documents/2121/: RPL NPL Tape_Trunc_v10.12.25 - NPL Tape-4.csv
data/APEX-v1-extended/documents/2157/: LBO_Assumption.csv
data/APEX-v1-extended/documents/2192/: 2192_UCGIM_Inputs.csv
data/APEX-v1-extended/documents/2205/: 2205_HEIANA_Input.csv
data/APEX-v1-extended/documents/2228/: Real-Estate-Pro-Forma Input csv.csv
data/APEX-v1-extended/documents/2230/: Horizone_Target.csv
data/APEX-v1-extended/documents/2232/: Real-Estate-Pro-Forma input csv.csv
data/APEX-v1-extended/documents/2266/: Country_data.csv
docs/: ARCHITECTURE.md  AUDIT.md  BENCHMARK_STRUCTURE.md  DC_RS_PRD.md  DYNAMIC_LEDGER_PRD.md  EVALUATION_PLAN.md  HARNESS_NOTES.md  IMPLEMENTATION_PLAN.md  INDEX.md  PROJECT.md  REPRODUCIBILITY.md  TRACE_PRD.md
runs/grok43high-baseline/: results.csv  results.run_manifest.json
runs/grok43high-dl/: results.csv  results.failures.jsonl  results.run_manifest.json
scripts/: fetch_dataset.sh  setup.sh  smoke_test.sh
src/apex_bench/: __init__.py  __main__.py  azure_routing.py  catalog.py  cli.py  config.py  dataset.py  paths.py  runner.py  smoke.py  task_index.py  test_models.py  vendor_imports.py
src/apex_bench/dc_rs/: __init__.py  bank.py  config.py  extract.py  formatting.py  injector.py  retriever.py  runtime.py  store.py  synthesizer.py
src/apex_bench/dynamic_ledger/: __init__.py  config.py  curator.py  dedup.py  embeddings.py  entry.py  injector.py  retriever.py  runtime.py  store.py
src/apex_bench/trace/: __init__.py  bullet.py  citations.py  config.py  curator.py  dedup.py  embeddings.py  injector.py  reflector.py  retriever.py  runtime.py  store.py
tests/: test_azure_routing.py  test_catalog.py  test_dataset.py  test_dc_rs_bank.py  test_dc_rs_extract.py  test_dc_rs_fidelity.py  test_dc_rs_formatting.py  test_dc_rs_injector.py  test_dc_rs_retriever.py  test_dc_rs_store.py  test_dc_rs_synthesizer.py  test_dynamic_ledger_curator.py  test_dynamic_ledger_entry.py  test_dynamic_ledger_fidelity.py  test_dynamic_ledger_injector.py  test_dynamic_ledger_retriever_dedup.py  test_dynamic_ledger_store.py  test_fidelity.py  test_imports.py  test_runner.py  test_task_index.py  test_test_models.py  test_trace_bullet.py  test_trace_curator_reflector.py  test_trace_fidelity.py  test_trace_injector_citations.py
(+59 files in other folders)
